# Django_schoolProject

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  fakerdata.py  fakerdatagenarat.py  pyproject.toml  run.sh
School/: __init__.py  celery.py  fakerdatagenarat.py  middleware.py  settings.py  urls.py
app/: admin.py  apps.py  forms.py  mail.py  models.py  services.py  signals.py  tasks.py  views.py
app/api/: serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_exam_school_group.py  0002_alter_parent_managers_alter_student_managers_and_more.py  0003_alter_exam_teacher.py  0003_alter_user_username_grades.py  0004_alter_grades_grade.py  0004_rename_schedulelessons_lessons.py  0005_alter_grades_grade.py  0005_alter_lessons_subject.py  0006_alter_grades_subject_alter_grades_teacher_and_more.py  0006_alter_homework_group_alter_homework_teacher_and_more.py  0007_alter_scheduleexams_school_group_and_more.py  0007_alter_student_school_group.py  0008_alter_exam_school_group.py  0008_alter_scheduleexams_school_group_alter_teacher_user_and_more.py  0009_photo_alter_homework_date_creation.py  0010_alter_homework_date_creation_alter_photo_image.py  0011_alter_homework_date_creation_alter_photo_image.py  0012_alter_homework_date_creation_alter_photo_image_and_more.py  0015_message_date_creation_alter_homework_date_creation.py
static/css/: main.css
templates/: errors.html
templates/main/: base.html  contacts.html  footer.html  gallery.html  info_for_stud.html  main.html  menu.html
templates/parent/: parent_grade.html  (+4 more)
(+17 files in other folders)
